# superkey

./: .gitignore  CMakeLists.txt  Doxyfile.in  configuration.cmake  init.sh  readme.md
.github/workflows/: build-atmega1284p-debug.yaml  build-atmega1284p-release.yaml  cmake-single-platform.yml
doc/: developer-guide.md  hardware-guide.md  hardware.md  user-guide.md
scripts/: autokey.py  example.py  interactive.py  readme.md  wordcopy.py
scripts/superkey/: __init__.py  constants.py  interface.py  superkey_intf.py  superkey_types.py  types.py
scripts/utility/: __init__.py  wordlist.py
src/: executable.cmake
src/exakey/: CMakeLists.txt  buzzer.c  buzzer.h  constants.h  debug.c  debug.h  gpio.c  gpio.h  input.c  input.h  keyer.c  keyer.h  led.c  led.h  main.c  sys.c  sys.h  types.h  usart.c  usart.h  utility.h
src/exakey/application/: buzzer.c  buzzer.h  config.c  config.h  debug_port.c  debug_port.h  input.c  input.h  keyer.c  keyer.h  led.c  led.h  wpm.c  wpm.h
src/exakey/core/: config.c  config.h  main.c  sys.c  sys.h  version.c  version.h
src/exakey/drivers/: gpio.c  gpio.h  usart.c  usart.h
src/exakey/utility/: constants.h  debug.c  debug.h  types.h  utility.h
src/main/: CMakeLists.txt  doxygen.dox
src/main/application/: buzzer.c  buzzer.h  config.c  config.h  debug_port.c  debug_port.h  input.c  input.h  intf_port.c  intf_port.h  intf_types.h  io.c  io.h  keyer.c  keyer.h  led.c  led.h  quick_msg.c  quick_msg.h  storage.c  storage.h  strings.c  strings.h  wpm.c  wpm.h
src/main/core/: main.c  sys.c  sys.h  version.c  version.h
src/main/drivers/: eeprom.c  eeprom.h  gpio.c  gpio.h  usart.c  usart.h
src/main/utility/: constants.h  crc.c  crc.h  debug.c  debug.h  types.h  utility.h
